# zebra_cv_project

./: .gitignore  README.md  pyproject.toml
project/: .gitignore  00_check_false_labels.ipynb  00_target_data_aug.ipynb  00_target_data_aug.py  01_split_data.py  02_model_training_pipeline.py  03_optuna_training_pipeline.py  04_train_pretrained.py  05_evaluate_trained_model.py  06_fine_tuning_and_augmenting.py  07_cnn_vit_seq.py  08_misclassification_analysis.py  09_cnn_vit_seq_optuna.py  09_review_candidates.py  10_apply_label_corrections.py  10_grad_cam_cnn_vit.py  11_rebuild_splits.py  12_labeler_try.py  helpers.py  models.py  prep_training.py  run_big_trans_3.py  run_eval.sh  train_model.sh  training_functions.py
project/trained_models/: CNN_ViT_Seq_Optuna_study_summary.json
project/trained_models/BT0_score-0.9789_20260516_161733/: history.json  metadata.json  results.json
project/trained_models/BT0_score-0.9797_20260516_162000/: metadata.json
project/trained_models/BT0_score-0.9797_20260517_004256/: history.json  metadata.json  results.json
project/trained_models/BT0_score-0.9862_20260517_004815/: history.json  metadata.json  results.json
project/trained_models/Big_Trans_2_score-0.9927_20260515_151942/: history.json  metadata.json  results.json
project/trained_models/Big_Trans_3_score-0.9978_20260516_110849/: history.json  metadata.json  results.json
project/trained_models/Big_Trans_score-0.9971_20260515_145108/: history.json  metadata.json  results.json
project/trained_models/CNN2_ViT_Seq_4_score-0.9920_20260429_113445/: history.json  metadata.json  (+1 more)
(+81 files in other folders)
