[project]
name = "dl-data-zebra"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "matplotlib",
    "optuna",
    "pandas",
    "psutil",
    "scikit-learn>=1.8.0",
    "scipy",
    "seaborn",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu118"
priority = "primary"

[[tool.uv.index]]
url = "https://pypi.org/simple"
priority = "supplemental"
